# Chass

./: .air.toml  .gitignore  README.md  go.mod  go.sum
cmd/chass/: main.go
cmd/discordbot/: main.go
discord-bot/: bot.go  commands.go  game.go  render.go  reply.go
discordbot/: commands.go  game.go  render.go  reply.go
internal/chess/: attack.go  bitboard.go  board.go  move.go  movegen.go  position.go  print.go  san.go  uci.go  zobrist.go
internal/cli/: play.go
internal/engine/: engine.go  eval.go  tt.go
internal/uci/: uci.go
python-client/: README.md  pyproject.toml
python-client/chass_client/: cli.py
web-client/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web-client/server/: index.ts
web-client/src/: App.tsx  styles.css  types.ts
web-client/src/components/: Board.tsx
web-client/src/lib/: board.ts
