[project]
name = "chass-client"
version = "0.1.0"
description = "Python client for the chass UCI engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-chess>=1.999",
]

[project.scripts]
chass-client = "chass_client.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
